# commercial_property_lease

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  DATABASE.md  DEPLOYMENT.md  Instructions.md  README.md  TASKS.md  package.json  pnpm-lock.yaml
services/backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
services/backend/alembic/: env.py  script.py.mako
services/backend/alembic/versions/: 0001_initial_schema.py  0002_lease_version_document_text.py  0003_visits.py  0004_watchlist_items.py
services/backend/app/: main.py
services/backend/app/ai/: base_agent.py  gateway.py  output_validator.py  prompt_builder.py
services/backend/app/api/: deps.py
services/backend/app/core/: config.py  database.py  http_client.py  logging.py  rate_limit.py  redis.py  security.py
services/backend/app/models/: __init__.py  audit_log.py  base.py  chat.py  kyc.py  lease.py  notification.py  property.py  user.py  visit.py  watchlist.py
services/backend/app/repositories/: base.py  lease_repository.py  lease_version_repository.py  property_repository.py  user_repository.py  (+4 more)
services/backend/prompts/: landlord_chat.v1.txt  lease_draft.v1.txt  property_search.v1.txt  property_verification.v1.txt
services/backend/scripts/: seed_properties.py
services/backend/tests/: conftest.py  test_ai_agents.py  test_ai_endpoints.py  test_auth_api.py  test_health.py  test_notifications_api.py  test_otp_service.py  test_properties_api.py  test_property_facts.py  test_security.py  test_tenant_profile_api.py  test_visit_schedule.py  test_visits_api.py  test_watchlist_api.py
(+106 files in other folders)
